# mave_calibration

./: .gitignore  01_Test_Kmeans_initialization.ipynb  02_Test_GMM_Initialization_Multisample.ipynb  03_Test_EM.ipynb  04_Unconstrained_Model.ipynb  05_Constrained_Model.ipynb  06_Datasets.ipynb  07_Identifying_OOD.ipynb  09_Distribution_Shapes.ipynb  10_Bootstrap_Figures.ipynb  11_Compare_Fits.ipynb  12_Rejection_Criteria.ipynb  14_Curation_Datasets.ipynb  15_Check_ClinVar_Duplicates.ipynb  16_Aggregate_Results.ipynb  17_Rescale_Kato.ipynb  18_Debug_Failing_Datasets.ipynb  19_Verify_ClinVar_Parsing.ipynb  21_Processed_Datasets.ipynb  22_Splice_Filter.ipynb  29_Scoreset_Evidence_Distribution.ipynb  README.md  dataset_stats.xlsx  debug.sh  evidence_distribution_fig.py  generate_aggregate_figs.py  generate_aggregate_figs_2.py  main.py  pyproject.toml
data_processing/: DataSummaries.ipynb  clinvar.py  config.json  gnomad.py  main.py  splice_ai.py
data_processing/mapping_nbs/: Adamovich_BRCA1_Cisplatin.ipynb  Adamovich_BRCA1_HDR.ipynb  Boettcher_TP53.ipynb  Erwood_BRCA2_HEK293T.ipynb  Erwood_NPC1_HEK293T.ipynb  Erwood_NPC1_RPE1.ipynb  Findlay_BRCA1_SGE.ipynb  Findlay_VHL.ipynb  (+28 more)
docs/: Proof.html
examples/: example.py
mave_calibration/: evidence_thresholds.py  initializations.py  main.py
nbs/: 05_Constrained_Model.ipynb  08_KL_Divergence.ipynb  15_Check_ClinVar_Duplicates.ipynb  16_Aggregate_Results.ipynb  19_Verify_ClinVar_Parsing.ipynb  20_Debug_ClinVar_Parsing.ipynb  23_ClinVar_VUS.ipynb  25_PU_Result.ipynb  26_Evidence_Framework.ipynb  27_Rejection_Test.ipynb  30_Data_Pipeline.ipynb  31_Reclassification.ipynb  32_Multiple_Components.ipynb  34_SingleFit.ipynb  Proof.ipynb
tests/: test_fit_skew_normal.py  test_modeling.py
(+46 files in other folders)
