[tool.poetry]
name = "mave-calibration"
version = "0.1.0"
description = ""
authors = ["Daniel Zeiberg <zeiberg.d@northeastern.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^8.2.2"
numpy = "^2.0.0"
scipy = "^1.14.0"
scikit-learn = "^1.5.1"
matplotlib = "^3.9.1"
seaborn = "^0.13.2"
tqdm = "^4.66.4"
fire = "^0.6.0"
biopython = "^1.84"
requests = "^2.32.3"
openpyxl = "^3.1.5"
mavehgvs = {git = "https://github.com/VariantEffect/mavehgvs.git"}
swifter = "^1.4.0"
ipywidgets = "^8.1.3"
jupyter = "^1.0.0"
nbconvert = "^7.16.4"
notebook = "6.0"
jupyter-contrib-nbextensions = "^0.7.0"
pandoc = "^2.4"
pysam = "^0.22.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
